--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
               <div class="portfolio-info">
                 <h4>Tanggap Darurat</h4>
                 <p>Tanggap darurat bukan panik, tapi bertindak dengan rencana.</p>
-                <a href="assets/img/portfolio/app-2.jpg" title="Tanggap Darurat" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="assets/img/tangdar.jpg" title="Tanggap Darurat" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
